tests/typechecker/should_pass/nested_paramterisation2.csp
module M(x)

exports

    module N(y)

    exports

        module O(z)

        exports

            channel f

        endmodule

    endmodule

endmodule

instance X1 = M(0)
instance X2 = X1::N(0)
instance X3 = X2::O(0)

g = X3::f
